--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav text-center ms-auto">
                 <li class="nav-item"><a class="nav-link" href="./index.html">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="./servico.html">Serviços</a></li>
                 <li class="nav-item"><a class="nav-link" href="./cursos.html">Cursos</a></li>
