--- a/localizacao.html
+++ b/localizacao.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="./estilo/estilo.css">
     <link rel="stylesheet" href="./estilo/global.css">
+    <link rel="shortcut icon" href="./img/img-menu.png" type="image/x-icon" >
 </head>
 
 <body>
@@ -46,6 +47,7 @@
         <section class="hero bg-dark text-white text-center " style=" background-size: cover;">
             <div class="container">
                 <h1 class="display-4">Encontre Nossa Barbearia</h1>
+                <hr>
                 <p class="lead">Com o melhor ambiente e profissionais qualificados para atender você!</p>
             </div>
         </section>
@@ -94,9 +96,8 @@
                         <div class="horarios">
                             <h5>Horário de Funcionamento</h5>
                             <ul>
-                                <li><strong>Segunda a Sexta:</strong> 09:00 - 19:00</li>
-                                <li><strong>Sábado:</strong> 09:00 - 15:00</li>
-                                <li><strong>Domingo:</strong> Fechado</li>
+                                <li><strong>Seg a Sáb:</strong> 09:00 - 19:00</li>
+                                <li><strong>Dom:</strong> Fechado</li>
                             </ul>
                         </div>
                     </div>
@@ -111,9 +112,9 @@
 
     <footer class=" rodape text-center py-4 bg-dark text-white">
         <div class="icons-rodape">
-            <a href="#"><img src="./img/whatsapp.png" alt="Whatsapp" width="30"></a>
-            <a href="#"><img src="./img/instagram.png" alt="Instagram" width="30"></a>
-            <a href="#"><img src="./img/twitter.png" alt="Twitter" width="30"></a>
+            <a href="https://web.whatsapp.com/"  target="_blank"><img src="./img/whatsapp.png" alt="Whatsapp" width="30"></a>
+            <a href="https://www.instagram.com/"  target="_blank"><img src="./img/instagram.png" alt="Instagram" width="30"></a>
+            <a href="https://x.com/?lang=pt"  target="_blank"><img src="./img/twitter.png" alt="X" width="30"></a>
         </div>
         <hr>
         <div class=" mt-3">
