--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./estilo/estilo.css">
     <link rel="stylesheet" href="./estilo/global.css">
+    <link rel="shortcut icon" href="./img/img-menu.png" type="image/x-icon" >
     <style>
       
     </style>
@@ -72,7 +73,7 @@
                 <p><i class="fas fa-phone-alt"></i> +55 21 4002-8922</p>
                 <p><i class="fas fa-envelope"></i> qg86.barbearia@email.com</p>
                 <p><i class="fas fa-map-marker-alt"></i> Rua Cel. Carlos Matos, 86, Nova Iguaçu</p>
-                <p><i class="fas fa-clock"></i> Seg-Sáb: 9h - 15h | Dom: Fechado</p>
+                <p><i class="fas fa-clock"></i> Seg-Sáb: 9h - 19h | Dom: Fechado</p>
                 <div class="map-container">
                     <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.263322282286!2d-43.453248223844476!3d-22.75560707936184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9967a99225f96f%3A0xec20bfc8ff090b46!2sSenac%20Nova%20Igua%C3%A7u!5e0!3m2!1spt-BR!2sbr!4v1740159273958!5m2!1spt-BR!2sbr"
