--- a/cursos.html
+++ b/cursos.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="./estilo/estilo.css">
     <link rel="stylesheet" href="./estilo/global.css"> 
+    <link rel="shortcut icon" href="./img/img-menu.png" type="image/x-icon" >
    
 </head>
 
@@ -112,9 +113,9 @@
 
     <footer class=" rodape text-center py-4 bg-dark text-white">
         <div class="icons-rodape">
-            <a href="#"><img src="./img/whatsapp.png" alt="Whatsapp" width="30"></a>
-            <a href="#"><img src="./img/instagram.png" alt="Instagram" width="30"></a>
-            <a href="#"><img src="./img/twitter.png" alt="Twitter" width="30"></a>
+            <a href="https://web.whatsapp.com/"  target="_blank"><img src="./img/whatsapp.png" alt="Whatsapp" width="30"></a>
+            <a href="https://www.instagram.com/"  target="_blank"><img src="./img/instagram.png" alt="Instagram" width="30"></a>
+            <a href="https://x.com/?lang=pt"  target="_blank"><img src="./img/twitter.png" alt="X" width="30"></a>
         </div>
         <hr>
         <div class=" mt-3">
