--- a/servico.html
+++ b/servico.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./estilo/estilo.css">
     <link rel="stylesheet" href="./estilo/global.css">
+    <link rel="shortcut icon" href="./img/img-menu.png" type="image/x-icon" >
     <title>Serviços - Barbearia</title>
 </head>
 
@@ -60,46 +61,46 @@
                     </div>
 
 
-                    <div class="col-md-6 colProfissionais">
+                    <div class="col-md-6 colProfissionais ">
                         <div class="row">
                             <!-- Profissional 1 -->
-                            <div class="col-md-6 mb-4">
-                                <div class="profissional-card" data-aos="fade-right">
-                                    <img src="./img/profissional1.jpg" alt="Profissional 1">
+                            <div class="col-md-6 mb-4 align-items-center">
+                                <figure class="profissional-card" data-aos="fade-right">
+                                    <img src="./img/profissional1.jpg" alt="Foto do Profissional João Silva">
                                     <div class="overlay">
                                         <h5>João Silva</h5>
                                     </div>
-                                </div>
+                                </figure>
                             </div>
 
                             <!-- Profissional 2 -->
-                            <div class="col-md-6 mb-4">
-                                <div class="profissional-card" data-aos="fade-up">
-                                    <img src="./img/profissional2.jpg" alt="Profissional 2">
+                            <div class="col-md-6 mb-4 align-items-center">
+                                <figure class="profissional-card" data-aos="fade-up">
+                                    <img src="./img/profissional2.jpg" alt="Foto do Profissional José Oliveira">
                                     <div class="overlay">
                                         <h5>José Oliveira</h5>
                                     </div>
-                                </div>
+                                </figure>
                             </div>
 
                             <!-- Profissional 3 -->
-                            <div class="col-md-6 mb-4">
-                                <div class="profissional-card" data-aos="fade-left">
-                                    <img src="./img/profissional3.jpg" alt="Profissional 3">
+                            <div class="col-md-6 mb-4 align-items-center">
+                                <figure class="profissional-card" data-aos="fade-left">
+                                    <img src="./img/profissional3.jpg" alt="Foto do Profissional Carlos Souza">
                                     <div class="overlay">
                                         <h5>Carlos Souza</h5>
                                     </div>
-                                </div>
+                                </figure>
                             </div>
 
                             <!-- Profissional 4 -->
-                            <div class="col-md-6 mb-4">
-                                <div class="profissional-card" data-aos="fade-right">
-                                    <img src="./img/profissional4.jpg" alt="Profissional 4">
+                            <div class="col-md-6 mb-4 align-items-center">
+                                <figure class="profissional-card" data-aos="fade-right">
+                                    <img src="./img/profissional4.jpg" alt="Foto da Profissional Maria Costa">
                                     <div class="overlay">
                                         <h5>Maria Costa</h5>
                                     </div>
-                                </div>
+                                </figure>
                             </div>
                         </div>
                     </div>
@@ -184,9 +185,9 @@
     <div class="separador"></div>
     <footer class=" rodape text-center py-4 bg-dark text-white">
         <div class="icons-rodape">
-            <a href="#"><img src="./img/whatsapp.png" alt="Whatsapp" width="30"></a>
-            <a href="#"><img src="./img/instagram.png" alt="Instagram" width="30"></a>
-            <a href="#"><img src="./img/twitter.png" alt="Twitter" width="30"></a>
+            <a href="https://web.whatsapp.com/"  target="_blank"><img src="./img/whatsapp.png" alt="Whatsapp" width="30"></a>
+            <a href="https://www.instagram.com/"  target="_blank"><img src="./img/instagram.png" alt="Instagram" width="30"></a>
+            <a href="https://x.com/?lang=pt"  target="_blank"><img src="./img/twitter.png" alt="X" width="30"></a>
         </div>
         <hr>
         <div class=" mt-3">
