--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
     </div>
 </header>
   
-<!-- Seção com efeito Parallax -->
+<!-- Seção Principal -->
 <section class="parallax">
     <div class="container-fluid principal">
-        <div class="row justify-content-center align-items-center" style="height: 100vh;">
+        <div class="row justify-content-center align-items-center" style="min-height: 100vh;;">
             <article class="col-md-12 text-center tituloPrincipal">
+                <p id="subtitulo"> Sejam bem Vindos ao</p>
                 <h3 >QG-86</h3>
                 <p id="subtitulo">Com cortes e serviços de qualidade, nossa barbearia oferece <br>um atendimento
                     personalizado para transformar a sua imagem e deixar você ainda mais confiante.</p>
