--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--  BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <!--  FONT AWESOME-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <!--  AOS-->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./estilo/estilo.css">
+    <!--  CSS GLOBAL -->
     <link rel="stylesheet" href="./estilo/global.css">
     <link rel="shortcut icon" href="./img/img-menu.png" type="image/x-icon" >
     <title>Barbearia</title>
@@ -88,7 +93,7 @@
             exclusivos que se adaptam ao seu estilo de vida.
         </p>
         <article class="row">
-            <article class="col-12 col-md-4 card text-center">
+            <article class="col-12 col-md-4 card text-center" data-aos="zoom-out-down">
                 <span></span><span></span><span></span><span></span> <!-- Bordas Animadas -->
                 <h3 class="plano-titulo">Plano Básico</h3>
                 <p class="plano-preco">R$ 80,90 / mês</p>
@@ -101,7 +106,7 @@
                 </ul>
                 <a href="#" class="btn btn-cta" data-bs-toggle="modal" data-bs-target="#cartaoModal">Assinar</a>
             </article>
-            <article class="col-12 col-md-4 card text-center">
+            <article class="col-12 col-md-4 card text-center" data-aos="zoom-out-down" >
                 <span></span><span></span><span></span><span></span> <!-- Bordas Animadas -->
                 <h3 class="plano-titulo">Plano Premium</h3>
                 <p class="plano-preco">R$ 150,90 / mês</p>
@@ -114,7 +119,7 @@
                 </ul>
                 <a href="#" class="btn btn-cta" data-bs-toggle="modal" data-bs-target="#cartaoModal">Assinar</a>
             </article>
-            <article class="col-12 col-md-4 card text-center">
+            <article class="col-12 col-md-4 card text-center" data-aos="zoom-out-down">
                 <span></span><span></span><span></span><span></span> <!-- Bordas Animadas -->
                 <h3 class="plano-titulo">Plano VIP</h3>
                 <p class="plano-preco">R$ 299,90 / mês</p>
@@ -278,10 +283,14 @@
     </button>
 </a>
 
-<!-- Inclusão do Bootstrap -->
+<!--  Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    
+<!--  AOS-->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
