--- a/servico.html
+++ b/servico.html
@@ -52,12 +52,7 @@
                         <p class="subtitulo">Nosso Time é composto por profissionais altamente desenvolvidos, que estão
                             sempre atualizados com as últimas tendências de cortes e estilos. Cada um de nossos
                             especialistas traz uma paixão única pela profissão, buscando sempre entregar resultados
-                            impecáveis. Nosso compromisso vai além do simples corte de cabelo: oferecer um atendimento
-                            personalizado, garantindo que cada cliente se sinta especial e satisfeito com o serviço.
-                            Aqui,
-                            você encontra mais do que habilidade técnica; encontra uma verdadeira experiência de cuidado
-                            e
-                            excelência.</p>
+                            impecáveis.</p>
                     </div>
 
 
